# BitgetKiTrading

./: .coveragerc  .dockerignore  .env.demo.example  .env.example  .env.local.example  .env.production.example  .env.shadow.example  .env.staging.example  .env.test.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  AI_FLOW.md  API_INTEGRATION_STATUS.md  FINAL_READINESS_REPORT.md  LANGUAGE_AND_UX_GUIDE.md  LOCAL_START_MINIMUM.md  OBSERVABILITY_AND_SLOS.md  PAGE_COMPLETION_MATRIX.md  PRODUCT_STATUS.md  README.md  STAGING_PARITY.md  ai-architecture.md  constraints-runtime.txt  content-style-guide.md  docker-compose.inference-gpu.yml  docker-compose.local-publish.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  project-audit.md  pyproject.toml  pytest_out.txt  qa-report.md  release-readiness.md  requirements-dev.txt  turbo.json
services/adversarial-engine/: Dockerfile  pyproject.toml
services/adversarial-engine/src/adversarial_engine/: __init__.py  app.py  arrow_ipc.py  config.py  main.py  market_stresser.py
services/alert-engine/: Dockerfile  README.md  pyproject.toml
services/alert-engine/src/alert_engine/: __init__.py  app.py  config.py  log_safety.py  main.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/src/api_gateway/: __init__.py  ai_strategy_proposal_governance.py  app.py  audit.py  auth.py  config.py  contract_pdf.py  customer_performance_attach.py  db.py  db_admin_console.py  db_ai_strategy_proposal_drafts.py  db_apex_latency.py  db_billing.py  db_commerce_queries.py  db_contract_workflow.py  db_customer_domain_events.py  db_customer_performance.py  db_customer_portal.py  db_dashboard_queries.py  db_integration_connectivity.py  db_integrations_matrix.py  db_live_broker_queries.py  db_live_queries.py  db_market_universe_queries.py  db_ops_queries.py  db_paper_mutations.py  db_paper_reads.py  db_payment_failure_log.py  db_payment_intents.py  db_profit_fee.py  db_settlement.py  db_subscription_billing.py  db_tenant_lifecycle.py  deps.py  errors.py  esign_mock.py  gateway_metrics.py  gateway_read_envelope.py  gateway_readiness_core.py  integrations_matrix.py  (+49 more)
services/audit-ledger/: Dockerfile  pyproject.toml
services/audit-ledger/src/audit_ledger/: __init__.py  app.py  config.py  crypto_sign.py  ledger_repository.py  main.py
services/drawing-engine/: Dockerfile  README.md  pyproject.toml
services/drawing-engine/src/drawing_engine/: app.py  builder.py  family_adapter.py  formatting.py  ids.py  main.py  persist.py  schema_validate.py  settings.py  worker.py
services/feature-engine/: Dockerfile  README.md  pyproject.toml
services/feature-engine/src/feature_engine/: __init__.py  app.py  correlation_graph.py  correlation_worker.py  main.py  numeric_hotpath.py  orderbook_apex.py  tsfm_pipeline.py  worker.py
services/inference-server/: Dockerfile  pyproject.toml
services/inference-server/proto/: timesfm_inference.proto
services/inference-server/src/inference_server/: __init__.py  config.py  embed_routes.py  embedding_model.py  grpc_servicer.py  health_app.py  inference_telemetry.py  main.py  monitoring.py  timesfm_model.py
services/learning-engine/: Dockerfile  README.md  pyproject.toml
services/learning-engine/src/learning_engine/: __init__.py  app.py  config.py  main.py
services/llm-orchestrator/: Dockerfile  README.md  pyproject.toml
services/llm-orchestrator/src/llm_orchestrator/: __init__.py  app.py  audit_ledger_commit.py  chart_annotation_sanitize.py  config.py  constants.py  exceptions.py  llm_metrics.py  llm_request_metrics_context.py  main.py  paths.py  quality_feedback_trace.py  service.py  worker.py
services/market-stream/: Dockerfile  README.md  pyproject.toml
services/market-stream/migrations/: 001_raw_events.sql  002_tsdb_schema_candles.sql  003_tsdb_schema_microstructure.sql
services/market-stream/src/market_stream/: __init__.py  app.py  feed_health.py  main.py  provider_diagnostics.py  vpin_telemetry.py
services/market-stream/tests/: conftest.py  test_candles.py  test_microstructure_parsers.py  test_orderbook_checksum.py  test_orderbook_zero_tolerance.py  test_sequence_buffer.py  test_vpin_prometheus.py
services/monitor-engine/: Dockerfile  README.md  pyproject.toml
services/monitor-engine/src/monitor_engine/: __init__.py  app.py  config.py  main.py  prom_metrics.py  trading_db_metrics.py
services/news-engine/: Dockerfile  README.md  pyproject.toml
services/news-engine/fixtures/: coindesk_sample.xml  cryptopanic_sample.json  gdelt_sample.json  newsapi_sample.json
services/news-engine/src/news_engine/: __init__.py  app.py  config.py  filters.py  health_contract.py  http_client.py  main.py  models.py  paths.py  timeparse.py  topic_tags.py  url_normalization.py  worker.py
services/onchain-sniffer/: Dockerfile  README.md  pyproject.toml
services/onchain-sniffer/src/onchain_sniffer/: __init__.py  app.py  config.py  dex_routers.py  eth_decode.py  eth_listener.py  impact_rs.py  main.py  publish.py  (+1 more)
services/onchain-sniffer/tests/: test_eth_decode_and_impact.py
services/paper-broker/: Dockerfile  README.md  pyproject.toml
services/paper-broker/fixtures/: contract_config_btcusdt.json  contract_config_ethusdt.json
services/signal-engine/: Dockerfile  README.md  pyproject.toml
services/structure-engine/: Dockerfile  README.md  pyproject.toml
shared/python/: pyproject.toml
shared/python/tests/: test_bitget_http.py  test_bitget_rest_errors.py  test_correlation_logging.py  test_eventbus.py  test_execution_forensic_snapshot.py  test_health_warnings_display.py  test_heartbeat_isolation.py  test_instrument_catalog_db_precedence.py  test_post_trade_review.py  test_regulatory_audit_report_pdf.py  test_replay_determinism.py  test_risk_rejection_inquiry.py  test_runtime_safety_oracle.py  test_shadow_live_divergence.py  test_shadow_live_forensics.py  test_shared_memory_bus.py  test_survival_kernel.py  test_tenant_rls_p76.py  test_trade_lifecycle_golden.py
shared_rs/apex_core/: Cargo.toml  pyproject.toml
shared_rs/apex_core/src/: lib.rs
(+2566 files in other folders)
