[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit-ledger"
version = "0.1.0"
description = "Apex Predator Audit Ledger — kryptographische War-Room-Entscheidungskette."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=44,<45",
  "fastapi",
  "httpx",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/audit_ledger"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
