[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learning-engine"
version = "0.1.0"
description = "Trade feedback collector: Redis streams -> learn.trade_evaluations"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "gymnasium>=0.29.1",
  "httpx",
  "joblib>=1.3.0",
  "prometheus_client>=0.20.0",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "scikit-learn",
  "python-json-logger>=2.0.7",
  "redis",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]
rl = ["stable-baselines3>=2.3.0", "torch>=2.1", "mlflow>=2.10.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/learning_engine"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
