[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-orchestrator"
version = "0.1.0"
description = "Zentraler LLM-Orchestrator: OpenAI, Structured Output, Cache."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "prometheus_client>=0.20.0",
  "httpx",
  "jsonschema",
  "openai>=2.8.0,<3",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "python-json-logger>=2.0.7",
  "redis",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_orchestrator"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
