[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-engine"
version = "0.1.0"
description = "News-Ingestion: CryptoPanic, NewsAPI, CoinDesk RSS, GDELT DOC 2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "prometheus_client>=0.20.0",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "python-json-logger>=2.0.7",
  "redis",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/news_engine"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
