[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onchain-sniffer"
version = "0.1.0"
description = "Apex On-Chain Mempool Sniffer: ETH/SOL DEX-Wale -> Redis Eventbus"
requires-python = ">=3.11"
dependencies = [
  "eth-abi>=5.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "prometheus_client>=0.20.0",
  "pydantic-settings>=2.6.0",
  "python-json-logger>=2.0.7",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.32.0",
  "web3>=6.20.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
solana = ["solana>=0.35.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/onchain_sniffer"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
