[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-broker"
version = "0.1.0"
description = "Paper Futures Broker: Margin, Fees, Funding, Slippage, Liquidation (Approx)."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "prometheus_client>=0.20.0",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "python-json-logger>=2.0.7",
  "redis",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/paper_broker"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
