[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-engine"
version = "0.1.0"
description = "Deterministische Signal-Engine V1 (6 Scoring-Schichten, Rejection, Klassifikation)."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "jsonschema",
  "prometheus_client>=0.20.0",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "python-json-logger>=2.0.7",
  "scikit-learn",
  "redis",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/signal_engine"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
