[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-py"
version = "0.1.0"
description = "Shared Python utilities for the Bitget BTCUSDT futures demo stack."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "httpx>=0.27",
  "numpy>=1.26,<3",
  "prometheus_client>=0.20",
  "psycopg[binary]>=3.2",
  "pydantic>=2.6",
  "pydantic-settings>=2",
  "redis>=5",
  "starlette>=0.37",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shared_py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
